# htmx-rust-askama-actix-prototype

./: Cargo.toml  README.md  index.html
browser-test/: post.rs
src/: auth.rs  main.rs  posts.rs
src/auth/: mod.rs
src/domain/: mod.rs
src/domain/model/: author.rs  mod.rs  posts.rs
src/posts/: author_repository.rs  mod.rs  post_repository.rs  templates.rs
src/posts/domain/: author_repository.rs  mod.rs  post_repository.rs
src/posts/domain/model/: posts.rs
src/posts/infrastructure/http/: mod.rs  routes.rs  templates.rs
src/posts/infrastructure/repository/: author_repository.rs  mod.rs  post_repository.rs
templates/auth/: logged_in.html  not_logged_in.html
templates/posts/: add_post_button.html  post.html  post_edit.html  posts_list.html
