[package]
name = "htmx-rust-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.1"
actix-files = "0.6.2"
actix-web = "4.4.0"
askama = "0.12.1"
chrono = "0.4.31"
serde = {version = "1.0.193", features = ["derive"]}
uuid = {version = "1.6.1", features = ["v4"]}
